manifests-failed/spa-demo-0.7.3.tgz-manifest.yaml
---
# Source: spa-demo/templates/common.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-spa-demo
  labels:
    helm.sh/chart: spa-demo-0.7.3
    app.kubernetes.io/name: spa-demo
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "master"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: spa-demo
    app.kubernetes.io/instance: my-release
---
# Source: spa-demo/templates/common.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-spa-demo
  labels:
    helm.sh/chart: spa-demo-0.7.3
    app.kubernetes.io/name: spa-demo
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "master"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: spa-demo
      app.kubernetes.io/instance: my-release
  template:
    metadata:
      labels:
        app.kubernetes.io/name: spa-demo
        app.kubernetes.io/instance: my-release
    spec:
      
      serviceAccountName: default
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
      - name: my-release-spa-demo
        image: "index.docker.io/dniel/forwardauth-spademo:master"
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        volumeMounts:
        
        livenessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 30
          failureThreshold: 5
          timeoutSeconds: 10
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 30
          failureThreshold: 5
          timeoutSeconds: 10
          periodSeconds: 10
---
# Source: spa-demo/templates/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: "my-release-spa-demo"
  labels:
    helm.sh/chart: spa-demo-0.7.3
    app.kubernetes.io/name: spa-demo
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "master"
    app.kubernetes.io/managed-by: Helm

spec:
  entryPoints:
    - websecure  

  routes:
  - match: Host(`spademo.example.test`)
    kind: Rule
    services:
    - name: my-release-spa-demo
      port: 80
    middlewares:
    - name: forwardauth-authorize
      namespace: forwardauth  

  tls:
    certResolver: "default"
